# SpeedReader

./: .D  .editorconfig  .gitignore  .gitmodules  .lfsconfig  CLAUDE.md  Directory.Build.props  Directory.Packages.props  LICENSING_AUDIT.md  MODEL_CONVERSION_GUIDE.md  OPENTELEMETRY_DEBIAN_FEASIBILITY.md  OcrBlock.mmd  OpusFlow.sln  README.md  SVTRv2_TextRecognition_Implementation_Notes.md  SpeedReader.sln  SpeedReader.slnx  TODO.md  copy-repo.sh  cs-to-clipboard.sh  demo.html  exercise.py  libs  ocr-results-schema.json  pad_test.cs  pre-commit.py  pre-commit.sh  pyproject.toml  structure.md  tensor_indexing_test.cs  video_viz.webm
.claude/: ocr-test-progress.md  settings.json
.claude/commands/: refactor.md  upskill.md
.claude/supplementary/: library.md  python.md
.github/workflows/: build-ubuntu.yml  build.yml  combine_static_libs.sh  dynamic.yml  get-container-id-final.sh  get-container-id.sh  (+2 more)
Src/Benchmarks/data/: analysis.py  combined.py  dbnet_analysis.py  pyproject.toml  svtr_analysis.py
analysis/: combined.py  dbnet_parallel.py  pyproject.toml
analysis/bench/: __init__.py  dbnet.py  inference.py  perf.py  pyproject.toml
build_utils/: __init__.py  pyproject.toml  utils.py
ci/: act.py  coverage.py  dynamic.yml  get-container-id.py  static.yml  validate-binary.py
docs/: ALPINE_MUSL_BUILD_PLAN.md
models/: analyze_onnx.py  build_dbnet.py  build_svtr.py  dbnet_resnet18_fpnc_1200e_icdar2015_fp32.onnx  dbnet_resnet18_fpnc_1200e_icdar2015_int8.onnx  download_dataset.py  svtrv2_base_ctc_fp32.onnx
native/: .clangd  Dockerfile  README.md  api-notes.md  build-research.md  build.sh  build_shared_lib.sh  build_static_lib.sh  compile.sh  smoke_test.c  spec.md  speedreader_ort.c  speedreader_ort.h
notebooks/: bandwidth.py  bandwidth.script.cs  batch_size.py  batch_size.script.cs  combined.py  combined.script.cs  dbnet_batch_size.py  dbnet_duration.py  dbnet_parallel.py  full_system.py  helpers.py  inter_threads.py  inter_threads.script.cs  svtr_batch_size.py  throughput.py  throughput_inference.cs
scripts/: build.py  build_onnx.py  build_speedreader_libs.py  clean.py  pyproject.toml  utils.py
src/: .editorconfig  Directory.Build.props  Directory.Build.rsp  Directory.Packages.props  SpeedReader.slnx
tools/: act.py  build.py  build_dbnet.py  build_onnx.py  build_speedreader_libs.py  build_svtr.py  download_dataset.py  pyproject.toml
tools/utils/: __init__.py  pyproject.toml  utils.py
(+824 files in other folders)
