[project]
name = "analysis"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "marimo",
    "pandas",
    "seaborn",
    "bench",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.1",
    "playwright>=1.58.0",
]

[tool.uv.sources]
bench = { path = "bench", editable = true }

[tool.marimo.runtime]
auto_reload = "lazy"
auto_instantiate = false
