[project]
name = "build_utils"
version = "0.1.0"
description = "Shared utilities for SpeedReader build scripts"
requires-python = "~=3.11.0"
dependencies = [
    "rich",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["build_utils"]
package-dir = {"build_utils" = "."}
