[project]
name = "scripts"
version = "0.1.0"
description = "Build scripts for SpeedReader"
authors = [
    { name = "Jimmy Beckett", email = "jimmybeckett1+github@gmail.com" }
]
requires-python = "~=3.11.0"
dependencies = [
    "click",
    "rich",
    "psutil",
    "onnx",
    "onnxruntime",
    "onnxsim",
    "pillow",
    "numpy",
]
