[project]
name = "utils"
version = "0.1.0"
description = "Shared utilities for SpeedReader build scripts"
requires-python = "~=3.11.0"
dependencies = [
    "rich",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]
package-dir = {"utils" = "."}
