[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.69.0",
    "marimo>=0.16.5",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
